# povic

./: Cargo.toml
src/: app.rs  main.rs  windows.rs
src/controllers/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  os.rs
