[package]
name = "intercooler"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo-generate = "0.23.4"
os_info = "3.12.0"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = "1.0.219"
sysinfo = { version = "0.36.1", features = ["multithread"] }
tokio = { version = "1.46.1", features = ["full"] }
winreg = "0.55.0"
wmi = "0.17.2"
