[package]
name = "intercooler"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
os_info = "3.12.0"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
sysinfo = { version = "0.36.1" }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
color-eyre = "0.6.5"

[dependencies.crossterm]
version = "0.29"
features = ["event-stream"]

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
wmi = "0.17.2"
serde = "1.0.219"
